# config/routes.rb
@@ -14,7 +14,7 @@ Rails.application.routes.draw do
 
       resources :customers, only: %i[index show create update destroy]
 
-      resources :vehicles, only: %i[index show create update]
+      resources :vehicles, only: %i[index show create update destroy]
 
       resources :inventory_items, only: %i[index show create update destroy] do
         member do
@@ -40,6 +40,7 @@ Rails.application.routes.draw do
           post :line_items, action: :add_line_item
           patch :execute
           patch :complete
+          patch :deliver
           patch "line_items/:line_item_id/start", action: :start_line_item, as: :start_line_item
           patch "line_items/:line_item_id/finish", action: :finish_line_item, as: :finish_line_item
         end
